--- a/src/app/address-form/address-form.component.html
+++ b/src/app/address-form/address-form.component.html
@@ -6,7 +6,7 @@
 
         <input matInput
                placeholder="Address Line 1"
-               formControlName="addressLine1">
+               formControlName="addressLine1" (blur)="onTouched()">
 
     </mat-form-field>
 
@@ -14,7 +14,7 @@
 
         <input matInput
                placeholder="Address Line 2"
-               formControlName="addressLine2">
+               formControlName="addressLine2" (blur)="onTouched()">
 
     </mat-form-field>
 
@@ -22,7 +22,7 @@
 
         <input matInput
                placeholder="Zip Code"
-               formControlName="zipCode">
+               formControlName="zipCode" (blur)="onTouched()">
 
     </mat-form-field>
 
@@ -30,20 +30,8 @@
 
         <input matInput
                placeholder="City"
-               formControlName="city">
+               formControlName="city" (blur)="onTouched()">
 
     </mat-form-field>
-
-    <div class="form-val">
-
-        {{form.value | json}}
-
-    </div>
-
-    <div class="form-val">
-
-        {{form.valid | json}}
-
-    </div>
 
 </fieldset>
