--- a/src/app/create-course/create-course-step-1/create-course-step-1.component.html
+++ b/src/app/create-course/create-course-step-1/create-course-step-1.component.html
@@ -1,4 +1,6 @@
 <div [formGroup]="form">
+    <!-- <address-form legend="Address" formControlName="address"></address-form> -->
+
     <mat-form-field>
         <input matInput placeholder="Course title" formControlName="title" #title>
         <mat-hint align="end">{{title.value.length}}/60</mat-hint>
@@ -30,4 +32,18 @@
     <mat-form-field appearance="outline">
         <textarea matInput placeholder="Description" formControlName="longDescription"></textarea>
     </mat-form-field>
+
+    <div>
+        {{ form.value | json}}
+    </div>
+
+    <div>
+        {{ form.valid | json}}
+    </div>
+
+    <div>
+
+        {{form.errors | json}}
+
+    </div>
 </div>
