--- a/src/app/create-course/create-course-step-2/create-course-step-2.component.html
+++ b/src/app/create-course/create-course-step-2/create-course-step-2.component.html
@@ -4,6 +4,8 @@
         <mat-radio-button value="premium">Premium</mat-radio-button>
     </mat-radio-group>
 
+    <file-upload requiredFileType="image/png" formControlName="thumbnail"></file-upload>
+
     <mat-form-field>
         <input type="number" matInput placeholder="price" formControlName="price">
     </mat-form-field>
@@ -21,4 +23,12 @@
 
         <mat-date-range-picker #promoPicker></mat-date-range-picker>
     </mat-form-field>
+
+    <div>
+        {{form.value| json}}
+    </div>
+
+    <div>
+       Form Validity state {{form.valid| json}}
+    </div>
 </div>
