--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -1,2 +1,13 @@
+<input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload name="fileUpload">
+<div class="file-upload">
 
+    <mat-form-field>
+        <input matInput [disabled]="true" [value]="fileName">
+    </mat-form-field>
+
+    <button mat-mini-fab color="primary" class="upload-btn" [disabled]="disabled"  (click)="onClick(fileUpload)">
+        <mat-icon>attach_file</mat-icon>
+    </button>
+</div>
+<mat-progress-bar class="progress-bar" mode="determinate" [value]="uploadProgress" *ngIf="uploadProgress"></mat-progress-bar>
 
